--- a/games/2-matching/package.json
+++ b/games/2-matching/package.json
@@ -16,5 +16,8 @@
     "grunt-shell": "^1.1.2",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1"
+  },
+  "dependencies": {
+    "handlebars": "^4.0.5"
   }
 }
